Fix body width overflowing

--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  width: 100vw;
   overflow-x: hidden;
 }
 
